<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.example.ediltrack.ui.viewmodel.HomeDipendenteViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

    <TextView
        android:id="@+id/label_nuova_prob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nuova_problematica"
        android:textStyle="bold"
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        android:textAllCaps="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        />

    <TextView
        android:id="@+id/tvLabelNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descrizione"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/label_nuova_prob"
        app:layout_constraintStart_toStartOf="parent"/>

    <EditText
        android:id="@+id/descr_prob"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/descrizione"
        android:text="@={viewModel._descrizione}"
        app:layout_constraintTop_toBottomOf="@id/tvLabelNome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tvLabelImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/immagine"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/descr_prob"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnUploadImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Carica immagine"
        style="@style/ButtonCantiereStyle"
        app:layout_constraintTop_toBottomOf="@id/tvLabelImg"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvlabelcant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cantiere"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnUploadImg"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnSelCant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleziona_cantiere"
        style="@style/ButtonCantiereStyle"
        app:layout_constraintTop_toBottomOf="@id/tvlabelcant"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/tvlabelFase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fase"
        android:layout_marginVertical="20dp"
        app:layout_constraintTop_toBottomOf="@id/btnSelCant"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnselFase"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seleziona_fase"
        style="@style/ButtonCantiereStyle"
        app:layout_constraintTop_toBottomOf="@id/tvlabelFase"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/btnSalva"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:text="@string/salva"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        style="@style/ButtonCantiereStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>



    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>