<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/label_nuovo_utente"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuovo_utente"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginBottom="20dp"
            android:textAllCaps="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"/>
        <TextView
            android:id="@+id/label_nome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome"
            app:layout_constraintTop_toBottomOf="@+id/label_nuovo_utente"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/nome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            app:layout_constraintTop_toBottomOf="@id/label_nome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/label_cognome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cognome"
            app:layout_constraintTop_toBottomOf="@+id/nome"
            app:layout_constraintStart_toStartOf="parent"/>
        <EditText
            android:id="@+id/cognome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/cognome"
            app:layout_constraintTop_toBottomOf="@id/label_cognome"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/label_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            app:layout_constraintTop_toBottomOf="@+id/cognome"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintTop_toBottomOf="@id/label_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <TextView
            android:id="@+id/label_pw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            app:layout_constraintTop_toBottomOf="@id/label_pw"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/label_ruolo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ruolo"
            app:layout_constraintTop_toBottomOf="@id/password"
            app:layout_constraintStart_toStartOf="parent"/>

        <Spinner
            android:id="@+id/spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            app:layout_constraintTop_toBottomOf="@id/label_ruolo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/carica_immagine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/immagine_operatore"
            app:layout_constraintTop_toBottomOf="@id/spinner"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/btnUploadImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Carica immagine"

            style="@style/ButtonCantiereStyle"
            app:layout_constraintTop_toBottomOf="@id/carica_immagine"
            app:layout_constraintStart_toStartOf="parent"/>

        <TextView
            android:id="@+id/caricato"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:text=""
            app:layout_constraintTop_toBottomOf="@id/btnUploadImg"
            app:layout_constraintStart_toStartOf="parent"/>

        <Button
            android:id="@+id/salva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Salva"

            style="@style/ButtonCantiereStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
